Bug 250990 - crash occurs when trying to change opening date of account
Summary: crash occurs when trying to change opening date of account
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: SVN
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-12 18:05 UTC by MK
Modified: 2010-09-15 11:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description MK 2010-09-12 18:05:56 UTC
Version:           SVN trunk (using KDE 4.5.1) 
OS:                Linux

Kmymoney crashes when trying to change the opening date of an account. Happens on old and new accounts regardless of having transactions stored in them.

Reproducible: Always

Steps to Reproduce:
Go to: accounts-> Icons view -> assets tab -> choose context menu for account -> edit account -> Change "Date" in "Opening information" section. Click OK.

Actual Results:  
Kmymoney crashes. 

KMM doesn't crash when changing the opening date of the account by choosing -> Institutions -> Edit account ... 

How can this happen- I suppose it is the same piece of code for the edit window?

Expected Results:  
Change the opening date of the account and close the edit window.

Application: kmymoney (4.5.0-svn1174499)
KDE Platform Version: 4.5.1 (KDE 4.5.1)
Qt Version: 4.7.0
Operating System: Linux 2.6.32-24-generic x86_64
Distribution: Ubuntu 10.04.1 LTS

-- Backtrace:
Application: KMyMoney (kmymoney), signal: Aborted
[Current thread is 1 (Thread 0x7f348c3cc760 (LWP 4184))]

Thread 2 (Thread 0x7f34734bf710 (LWP 4185)):
#0  0x00007f3486cd5f53 in *__GI___poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f3481e234a9 in g_main_context_poll (context=0x17f7df0, block=<value optimized out>, dispatch=<value optimized out>, self=<value optimized out>)
    at /build/buildd/glib2.0-2.24.1/glib/gmain.c:2904
#2  g_main_context_iterate (context=0x17f7df0, block=<value optimized out>, dispatch=<value optimized out>, self=<value optimized out>) at /build/buildd/glib2.0-2.24.1/glib/gmain.c:2586
#3  0x00007f3481e238fc in IA__g_main_context_iteration (context=0x17f7df0, may_block=1) at /build/buildd/glib2.0-2.24.1/glib/gmain.c:2654
#4  0x00007f3487b421d6 in QEventDispatcherGlib::processEvents (this=0x17f7760, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:417
#5  0x00007f3487b14dd2 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#6  0x00007f3487b151bc in QEventLoop::exec (this=0x7f34734bedb0, flags=) at kernel/qeventloop.cpp:201
#7  0x00007f3487a2036d in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:490
#8  0x00007f3487af4b48 in QInotifyFileSystemWatcherEngine::run (this=0x17e0520) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x00007f3487a232ee in QThreadPrivate::start (arg=0x17e0520) at thread/qthread_unix.cpp:266
#10 0x00007f34899629ca in start_thread (arg=<value optimized out>) at pthread_create.c:300
#11 0x00007f3486ce26cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#12 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f348c3cc760 (LWP 4184)):
[KCrash Handler]
#6  0x00007f3486c2fa75 in *__GI_raise (sig=<value optimized out>) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#7  0x00007f3486c335c0 in *__GI_abort () at abort.c:92
#8  0x00007f3487a1a8e4 in qt_message_output (msgType=QtFatalMsg, buf=<value optimized out>) at global/qglobal.cpp:2259
#9  0x00007f3487a1aac2 in qt_message (msgType=QtFatalMsg, msg=0x7f3487b7bdd8 "ASSERT failure in %s: \"%s\", file %s, line %d", ap=0x7fffba3828d0) at global/qglobal.cpp:2305
#10 0x00007f3487a1ac75 in qFatal (msg=0x1058 <Address 0x1058 out of bounds>) at global/qglobal.cpp:2488
#11 0x0000000000510529 in ?? ()
#12 0x000000000050cd69 in ?? ()
#13 0x000000000050df91 in ?? ()
#14 0x00007f3487b2dda7 in QMetaObject::activate (sender=0x171ea30, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0xffffffffffffffff) at kernel/qobject.cpp:3280
#15 0x00007f3488a9e474 in QListWidget::qt_metacall (this=0x171ea30, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffba382d00) at .moc/release-shared/moc_qlistwidget.cpp:137
#16 0x00007f348a94b3e0 in KListWidget::qt_metacall (this=0x1058, _c=4184, _id=6, _a=0xffffffffffffffff) at ./klistwidget.moc:80
#17 0x00007f3487b2dda7 in QMetaObject::activate (sender=0x172bd80, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0xffffffffffffffff) at kernel/qobject.cpp:3280
#18 0x00007f3488a85e57 in QItemSelectionModel::selectionChanged (this=0x1058, _t1=<value optimized out>, _t2=<value optimized out>) at .moc/release-shared/moc_qitemselectionmodel.cpp:152
#19 0x00007f3488a89fcc in QItemSelectionModel::clearSelection (this=0x172bd80) at itemviews/qitemselectionmodel.cpp:1130
#20 0x00007f3488a8a06f in QItemSelectionModel::clear (this=0x1058) at itemviews/qitemselectionmodel.cpp:1097
#21 0x00007f3488a9c493 in QListWidget::clear (this=<value optimized out>) at itemviews/qlistwidget.cpp:1751
#22 0x000000000050d465 in ?? ()
#23 0x000000000050c4c6 in ?? ()
#24 0x000000000050c0e4 in ?? ()
#25 0x000000000050bfc0 in ?? ()
#26 0x000000000050de11 in ?? ()
#27 0x00007f3487b2dda7 in QMetaObject::activate (sender=0x7f348c1f6400, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0xffffffffffffffff) at kernel/qobject.cpp:3280
#28 0x00007f348bf94069 in MyMoneyFile::dataChanged (this=0x7f348c1f6400) at /usr/local/src/kmymoney/debug/kmymoney/mymoney/mymoneyfile.moc:83
#29 0x00007f348bf8344a in MyMoneyFile::commitTransaction (this=0x7f348c1f6400) at /usr/local/src/kmymoney/kmymoney/mymoney/mymoneyfile.cpp:160
#30 0x00007f348bf93f09 in MyMoneyFileTransaction::commit (this=0x7fffba383cf0) at /usr/local/src/kmymoney/kmymoney/mymoney/mymoneyfile.cpp:2408
#31 0x00000000004853c4 in ?? ()
#32 0x00000000004a3bb5 in ?? ()
#33 0x00007f3487b2dda7 in QMetaObject::activate (sender=0x135cc10, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0xffffffffffffffff) at kernel/qobject.cpp:3280
#34 0x00007f34884df082 in QAction::triggered (this=0x1058, _t1=false) at .moc/release-shared/moc_qaction.cpp:263
#35 0x00007f34884e077b in QAction::activate (this=0x135cc10, event=<value optimized out>) at kernel/qaction.cpp:1256
#36 0x00007f3488941ec1 in QMenuPrivate::activateCausedStack (this=<value optimized out>, causedStack=..., action=0x135cc10, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:993
#37 0x00007f348894786a in QMenuPrivate::activateAction (this=0x147de70, action=0x135cc10, action_e=QAction::Trigger, self=<value optimized out>) at widgets/qmenu.cpp:1085
#38 0x00007f348aa64ebe in KMenu::mouseReleaseEvent (this=0x147da40, e=0x1058) at ../../kdeui/widgets/kmenu.cpp:471
#39 0x00007f348853c16e in QWidget::event (this=0x147da40, event=0x7fffba384fa0) at kernel/qwidget.cpp:8158
#40 0x00007f34889499eb in QMenu::event (this=0x147da40, e=0x7fffba384fa0) at widgets/qmenu.cpp:2410
#41 0x00007f34884e676c in QApplicationPrivate::notify_helper (this=0x11eb500, receiver=0x147da40, e=0x7fffba384fa0) at kernel/qapplication.cpp:4396
#42 0x00007f34884eca7e in QApplication::notify (this=0x11eb460, receiver=0x147da40, e=0x7fffba384fa0) at kernel/qapplication.cpp:3959
#43 0x00007f348a9842e6 in KApplication::notify (this=0x11eb460, receiver=0x147da40, event=0x7fffba384fa0) at ../../kdeui/kernel/kapplication.cpp:310
#44 0x00007f3487b160ac in QCoreApplication::notifyInternal (this=0x11eb460, receiver=0x147da40, event=0x7fffba384fa0) at kernel/qcoreapplication.cpp:732
#45 0x00007f34884eb52e in QCoreApplication::sendEvent (receiver=0x147da40, event=0x7fffba384fa0, alienWidget=0x0, nativeWidget=0x147da40, buttonDown=<value optimized out>, 
    lastMouseReceiver=<value optimized out>, spontaneous=true) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#46 QApplicationPrivate::sendMouseEvent (receiver=0x147da40, event=0x7fffba384fa0, alienWidget=0x0, nativeWidget=0x147da40, buttonDown=<value optimized out>, lastMouseReceiver=<value optimized out>, 
    spontaneous=true) at kernel/qapplication.cpp:3058
#47 0x00007f348856e72d in QETWidget::translateMouseEvent (this=0x147da40, event=<value optimized out>) at kernel/qapplication_x11.cpp:4337
#48 0x00007f348856cbec in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fffba3858c0) at kernel/qapplication_x11.cpp:3536
#49 0x00007f3488598e22 in x11EventSourceDispatch (s=0x11ef340, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:146
#50 0x00007f3481e1f8c2 in g_main_dispatch (context=0x11ee120) at /build/buildd/glib2.0-2.24.1/glib/gmain.c:1960
#51 IA__g_main_context_dispatch (context=0x11ee120) at /build/buildd/glib2.0-2.24.1/glib/gmain.c:2513
#52 0x00007f3481e23748 in g_main_context_iterate (context=0x11ee120, block=<value optimized out>, dispatch=<value optimized out>, self=<value optimized out>)
    at /build/buildd/glib2.0-2.24.1/glib/gmain.c:2591
#53 0x00007f3481e238fc in IA__g_main_context_iteration (context=0x11ee120, may_block=1) at /build/buildd/glib2.0-2.24.1/glib/gmain.c:2654
#54 0x00007f3487b42183 in QEventDispatcherGlib::processEvents (this=0x11ca680, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:415
#55 0x00007f348859878e in QGuiEventDispatcherGlib::processEvents (this=0x1058, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#56 0x00007f3487b14dd2 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#57 0x00007f3487b151bc in QEventLoop::exec (this=0x7fffba385bf0, flags=) at kernel/qeventloop.cpp:201
#58 0x00007f3488944fc5 in QMenu::exec (this=0x147da40, p=<value optimized out>, action=0x0) at widgets/qmenu.cpp:2054
#59 0x0000000000497ac2 in ?? ()
#60 0x0000000000497ee9 in ?? ()
#61 0x00000000004a3d11 in ?? ()
#62 0x00007f3487b2dda7 in QMetaObject::activate (sender=0x16ed8f0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0xffffffffffffffff) at kernel/qobject.cpp:3280
#63 0x000000000050e159 in ?? ()
#64 0x000000000050d319 in ?? ()
#65 0x000000000050d087 in ?? ()
#66 0x000000000050dfb9 in ?? ()
#67 0x00007f3487b2dda7 in QMetaObject::activate (sender=0x171ea30, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0xffffffffffffffff) at kernel/qobject.cpp:3280
#68 0x00007f348852f952 in QWidget::customContextMenuRequested (this=0x1058, _t1=<value optimized out>) at .moc/release-shared/moc_qwidget.cpp:360
#69 0x00007f348853c532 in QWidget::event (this=0x171ea30, event=0x7fffba387110) at kernel/qwidget.cpp:8328
#70 0x00007f3488902ba6 in QFrame::event (this=0x171ea30, e=0x7fffba387110) at widgets/qframe.cpp:557
#71 0x00007f3488a3a85b in QAbstractItemView::viewportEvent (this=0x171ea30, event=0x7fffba387110) at itemviews/qabstractitemview.cpp:1619
#72 0x00007f3487b158d7 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<value optimized out>, receiver=0x171ef80, event=0x7fffba387110) at kernel/qcoreapplication.cpp:847
#73 0x00007f34884e673c in QApplicationPrivate::notify_helper (this=0x11eb500, receiver=0x171ef80, e=0x7fffba387110) at kernel/qapplication.cpp:4392
#74 0x00007f34884ec441 in QApplication::notify (this=0x11eb460, receiver=0x171ef80, e=0x7fffba387110) at kernel/qapplication.cpp:4038
#75 0x00007f348a9842e6 in KApplication::notify (this=0x11eb460, receiver=0x171ef80, event=0x7fffba387110) at ../../kdeui/kernel/kapplication.cpp:310
#76 0x00007f3487b160ac in QCoreApplication::notifyInternal (this=0x11eb460, receiver=0x171ef80, event=0x7fffba387110) at kernel/qcoreapplication.cpp:732
#77 0x00007f348856e302 in QETWidget::translateMouseEvent (this=<value optimized out>, event=<value optimized out>) at kernel/qapplication_x11.cpp:4408
#78 0x00007f348856cbec in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fffba387a60) at kernel/qapplication_x11.cpp:3536
#79 0x00007f3488598e22 in x11EventSourceDispatch (s=0x11ef340, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:146
#80 0x00007f3481e1f8c2 in g_main_dispatch (context=0x11ee120) at /build/buildd/glib2.0-2.24.1/glib/gmain.c:1960
#81 IA__g_main_context_dispatch (context=0x11ee120) at /build/buildd/glib2.0-2.24.1/glib/gmain.c:2513
#82 0x00007f3481e23748 in g_main_context_iterate (context=0x11ee120, block=<value optimized out>, dispatch=<value optimized out>, self=<value optimized out>)
    at /build/buildd/glib2.0-2.24.1/glib/gmain.c:2591
#83 0x00007f3481e238fc in IA__g_main_context_iteration (context=0x11ee120, may_block=1) at /build/buildd/glib2.0-2.24.1/glib/gmain.c:2654
#84 0x00007f3487b42183 in QEventDispatcherGlib::processEvents (this=0x11ca680, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:415
#85 0x00007f348859878e in QGuiEventDispatcherGlib::processEvents (this=0x1058, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#86 0x00007f3487b14dd2 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#87 0x00007f3487b151bc in QEventLoop::exec (this=0x7fffba387d90, flags=) at kernel/qeventloop.cpp:201
#88 0x00007f3487b1926b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#89 0x000000000045da4b in _start ()
Comment 1 Alvaro Soliverez 2010-09-15 11:52:00 UTC
SVN commit 1175575 by asoliverez:

Fixed crash when reselecting an account in icons view

BUG:250990

 M  +3 -3      kaccountsview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1175575
Comment 2 Alvaro Soliverez 2010-09-15 11:57:02 UTC
SVN commit 1175576 by asoliverez:

Ported to stable branch

BUG:250990

 M  +3 -3      kaccountsview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1175576