Fixed crash when reselecting an account in icons view

BUG:250990

svn path=/trunk/extragear/office/kmymoney/; revision=1175575